fixed image background layout bugs

--- a/react-portfolio/src/components/styles/about.css
+++ b/react-portfolio/src/components/styles/about.css
@@ -1,4 +1,8 @@
-.vertical-line {
+main{
+  height: 100vh;
+}
+
+.vertical-line{
     content: '';
     width: 3px;
     height: 5rem;
@@ -13,14 +17,14 @@
     background: #909294;
     border-radius: 10px;
   }
+.skill{
+  height: 10rem;
+}
 
 
-  .skill{
-    height:10rem;
-    width: 10rem;
-  }
 
   .skill img{
     width: 4rem;
+    height: 4rem;
     object-fit: fill;
   }
